@@ -27,6 +27,8 @@ Copyright © 2018, 2019, 2020, 2021 Ricardo Wurmus <rekado@elephly.net>
 - errors when loading workflows no longer show the GWL or SRFI modules as the error location; instead they are limited to the source file where they originated.
 - brace errors in code snippets are now reported with approximate location
 - =pick= from =(gwl utils)= now raise error conditions when an item cannot be found.
+- when a code snippet references an element of a tagged list that does not exist, an error is thrown at runtime instead of injecting =#false=
+
 ** Workflow syntax
 - new procedure =get= to access members of nested association lists by path.
 ** Execution engines
